--- a/JPA1/src/main/resources/application.yml
+++ b/JPA1/src/main/resources/application.yml
@@ -13,4 +13,4 @@ spring:
         format_sql: true
 logging.level:
   org.hibernate.SQL: debug
-  # org.hibernate.type: trace #띄어쓰기 2칸
+  # org.hibernate.type: trace
