--- a/JPA1/src/main/resources/application.yml
+++ b/JPA1/src/main/resources/application.yml
@@ -9,8 +9,7 @@ spring:
       ddl-auto: create
     properties:
       hibernate:
-        # show_sql: true #띄어쓰기 8칸
         format_sql: true
 logging.level:
   org.hibernate.SQL: debug
-  # org.hibernate.type: trace
+  org.hibernate.type: trace
