--- a/JPA1/src/main/resources/application.yml
+++ b/JPA1/src/main/resources/application.yml
@@ -12,4 +12,4 @@ spring:
         format_sql: true
 logging.level:
   org.hibernate.SQL: debug
-  org.hibernate.type: trace
+#  org.hibernate.type: trace
